--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -7,6 +7,7 @@
     tools:context=".firstscreens.appscreens.GroupActivity">
 
     <ListView
+        android:id="@+id/GroupItemsList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
