--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".firstscreens.appscreens.GroupActivity">
+    tools:context=".firstscreens.groupActivity.GroupActivity">
 
     <ListView
         android:id="@+id/GroupItemsList"
