--- a/app/src/main/res/layout/activity_log_in_acivity.xml
+++ b/app/src/main/res/layout/activity_log_in_acivity.xml
@@ -4,16 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".firstscreens.LogInAcivity">
+    tools:context=".firstscreens.FirstActivities.LogInAcivity">
 
     <Button
         android:id="@+id/logIn"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="269dp"
-        android:layout_marginBottom="23dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="292dp"
+        android:layout_marginEnd="162dp"
+        android:layout_marginBottom="391dp"
         android:text="@string/sign_in"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,15 +44,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginBottom="130dp"
-        android:text="keep me signed"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logIn" />
 </android.support.constraint.ConstraintLayout>
