--- a/app/src/main/res/layout/activity_log_in_acivity.xml
+++ b/app/src/main/res/layout/activity_log_in_acivity.xml
@@ -44,4 +44,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
+    <TextView
+        android:id="@+id/NeedAcount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="83dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginBottom="175dp"
+        android:text="Need a new acount?"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logIn" />
+
 </android.support.constraint.ConstraintLayout>
