--- a/app/src/main/res/layout/activity_log_in_acivity.xml
+++ b/app/src/main/res/layout/activity_log_in_acivity.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/logIn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="129dp"
+        android:layout_height="50dp"
         android:layout_marginStart="161dp"
         android:layout_marginTop="292dp"
         android:layout_marginEnd="162dp"
@@ -17,8 +17,10 @@
         android:text="@string/sign_in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.376" />
 
     <EditText
         android:id="@+id/email"
