--- a/app/src/main/res/layout/activity_group_name.xml
+++ b/app/src/main/res/layout/activity_group_name.xml
@@ -44,19 +44,12 @@
         app:layout_constraintStart_toEndOf="@+id/editText2"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="101dp"
-        android:layout_height="82dp"
-        android:layout_marginStart="258dp"
-        android:layout_marginTop="308dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CreateBTN"
-        app:srcCompat="@drawable/ic_menu_send"
+    <ListView
+        android:id="@+id/membersListView"
+        android:layout_width="368dp"
+        android:layout_height="282dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="114dp"
         tools:ignore="MissingConstraints" />
 
 
