--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".firstscreens.groupActivity.AddUsersToGroupActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".firstscreens.MainActivity.MainActivity"
+    tools:showIn="@layout/app_bar_main">
 
     <ListView
-        android:id="@+id/UsersListView"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:ignore="MissingConstraints" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </android.support.constraint.ConstraintLayout>
