--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,6 +9,7 @@
     tools:showIn="@layout/app_bar_main">
 
     <ListView
+        android:id="@+id/listOfGroups"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
