--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,13 +5,13 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_createGroup"
             android:icon="@drawable/download"
             android:title="@string/create_group" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_addFriend"
+            android:icon="@android:drawable/ic_menu_myplaces"
+            android:title="Add friend" />
     </group>
 
     <item android:title="Communicate">
